# sequoia

./: .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  Makefile  README.md  openpgp-policy.toml  yy
.cargo/: config.toml
.ci/: all_commits.sh  test_commit.sh
.gitlab/: all_commits.sh
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Default.md
autocrypt/: Cargo.toml
autocrypt/src/: lib.rs
buffered-reader/: Cargo.toml  NEWS
buffered-reader/src/: generic.rs  lib.rs  macros.rs  reference.rs
core/: Cargo.toml
doc/: coding-conventions.md  release-checklist.md
ffi/: Cargo.toml
ffi-macros/: Cargo.toml
ffi/lang/python/: Makefile
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pgp-parser.rs
guide/: Cargo.toml  build.rs
guide/src/: chapter_02.md
ipc/: Cargo.toml  build.rs
ipc/examples/: gpg-agent-decrypt.rs
ipc/src/: core.rs  gnupg.rs  keybox.rs  keygrip.rs  lib.rs  macros.rs  sexp.rs
ipc/src/assuan/: lexer.rs  mod.rs
ipc/src/sexp/parse/: lexer.rs
ipc/tests/: gpg-agent.rs
ipc/tests/data/keys/: testy-brainpoolp256-primary-pubkey.pgp  testy-nistp256-pubkey.pgp
ipc/tests/data/sexp/: dsa2048-elgamal3072-dsa-pubkey.sexp  dsa2048-elgamal3072-elg-pubkey.sexp  testy-brainpoolp256-primary-pubkey.sexp  testy-new-cv25519-pubkey.sexp  testy-new-ed25519-pubkey.sexp  testy-nistp256-pubkey.sexp  testy-rsa-pubkey.sexp
net/: Cargo.toml
net/src/: async.rs  lib.rs  wkd.rs
net/tests/: wkd.rs
openpgp/: Cargo.toml  NEWS  build.rs
openpgp-default/: Cargo.toml
openpgp-default/src/: lib.rs
openpgp-ffi/: Cargo.toml
openpgp-ffi/examples/: generate-key.c
openpgp-ffi/include/sequoia/: io.h  openpgp.h
openpgp-ffi/include/sequoia/openpgp/: crypto.h  error.h  packet.h  serialize.h  types.h
openpgp-ffi/src/: amalgamation.rs  cert.rs  common.rs  tpk.rs
openpgp-ffi/src/packet/: pkesk.rs  skesk.rs  userid.rs
openpgp-ffi/src/parse/: stream.rs
openpgp/benches/: decrypt_message.rs  decrypt_verify_message.rs  encrypt_message.rs  encrypt_sign_message.rs  generate_cert.rs  generate_keys.rs  parse_cert.rs  random.rs  read_keys.rs  sign_message.rs  verify_message.rs
openpgp/benches/common/: decrypt.rs  encrypt.rs
openpgp/examples/: encrypt-for.rs  generate-encrypt-decrypt.rs  generate-key.rs  generate-sign-verify.rs  notarize.rs  pad.rs  reply-encrypted.rs  sign-detached.rs  sign.rs  statistics.rs  supported-algorithms.rs  test-vectors-argon2.rs  test-vectors-dump-s2k.rs  test-vectors-dump-seipv2.rs  test-vectors-seipv2.rs  wrap-literal.rs
openpgp/src/: armor.rs  autocrypt.rs  cert.rs  fingerprint.rs  fmt.rs  keyhandle.rs  keyid.rs  lib.rs  macros.rs  packet_pile.rs  parse.rs  policy.rs  serialize.rs  signature.rs  tests.rs  wot.rs
openpgp/src/cert/: amalgamation.rs  bindings.rs  builder.rs  bundle.rs  component_iter.rs  key_amalgamation.rs  keyiter.rs  lazysigs.rs  mod.rs  prelude.rs  raw.rs  revoke.rs
openpgp/src/cert/amalgamation/: iter.rs  key.rs  keyiter.rs
openpgp/src/cert/builder/: key.rs  userid.rs
openpgp/src/cert/parser/: mod.rs
openpgp/src/crypto/: aead.rs  asymmetric.rs  backend.rs  ecdh.rs  hash.rs  key.rs  mem.rs  mod.rs  mpi.rs  primitives.rs  s2k.rs  symmetric.rs
openpgp/src/crypto/backend/: cng.rs  interface.rs  kernel.rs  nettle.rs  openssl.rs  rust.rs
openpgp/src/crypto/primitives/: aead.rs  cipher.rs  curve25519.rs  dsa.rs  ecc.rs  ecdh.rs  ecdsa.rs  ed25519.rs  hash.rs  mode.rs  random.rs  rsa.rs  x25519.rs
openpgp/src/crypto/tests/: rsa.rs
openpgp/src/message/: lexer.rs  mod.rs
openpgp/src/packet/: any.rs  container.rs  key.rs  mod.rs  one_pass_sig.rs  padding.rs  pkesk.rs  prelude.rs  seip.rs  signature.rs  skesk.rs  tag.rs  unknown.rs  userid.rs
openpgp/src/packet/header/: ctb.rs  (+1 more)
openpgp/src/parse/: hashed_reader.rs  map.rs  mpis.rs  packet_parser_builder.rs  parse.rs  partial_body.rs  stream.rs
openpgp/src/regex/: lexer.rs  mod.rs
openpgp/src/serialize/: cert.rs  cert_armored.rs  stream.rs
openpgp/src/tpk/: bindings.rs  builder.rs  mod.rs
openpgp/src/types/: features.rs  key_flags.rs  mod.rs  server_preferences.rs  timestamp.rs
openpgp/src/wot/: backward_propagation.rs  forward_propagation.rs  network.rs  path.rs  priority_queue.rs
openpgp/tests/data/: 820.asc
public-store/: Cargo.toml
public-store/src/: error.rs  lib.rs  store.rs
public-store/testdata/: alice.pgp  foo.pgp  foo.pgp.rev  sender.pgp  sender.public  sender_public.pgp  trust-root
secret/: Cargo.toml  build.rs
secret/src/: backend.rs  lib.rs  macros.rs  secret_protocol.capnp  secret_protocol_capnp.rs  server.rs
secret/src/backend/: mod.rs
sop/: Cargo.toml
sop/src/: main.rs
sq/: Cargo.toml  Makefile  build.rs  sq-armor.1  sq-autocrypt-decode.1  sq-autocrypt-encode-sender.1  sq-autocrypt.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-generate.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-sign.1  sq-usage.md  sq-verify.1  sq.1
sq-manpage/: Cargo.toml  README.md
sq-manpage/src/: main.rs  sq_cli.rs
sq/src/: sq-usage.rs  sq.rs  sq_cli.rs
sq/src/commands/: certify.rs  decrypt.rs  dump.rs  export.rs  import.rs  inspect.rs  key.rs  keystore.rs  merge_signatures.rs  mod.rs  net.rs  sign.rs  store.rs  wot.rs
sq/src/sq_cli/: decrypt.rs  encrypt.rs  export.rs  import.rs  key.rs  keystore.rs  mod.rs  packet.rs  sign.rs  store.rs  types.rs  verify.rs
sq/tests/: sq-certify.rs  sq-revoke.rs  sq-sign.rs
sqv/: Cargo.toml
sqv/src/: sqv.rs
sqv/tests/: revoked-key.rs
store/: Cargo.toml
store-rusqlite/: Cargo.toml
store-rusqlite/src/: lib.rs
store/examples/: not-sync.rs
store/src/: lib.rs  macros.rs  not_sync.rs
store/src/backend/: mod.rs
store/tests/: ipc-policy.rs
tool/: Cargo.toml
tool/src/: sq-usage.rs  sq.rs  sq_cli.rs
tool/src/commands/: dump.rs  inspect.rs  mod.rs
(+142 files in other folders)
