[package]
name = "sequoia"
description = "A cool new OpenPGP implementation"
version = "0.19.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.19.0/"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[workspace]

[dependencies]
buffered-reader = { path = "buffered-reader" }
sequoia-openpgp = { path = "openpgp", default-features = false }
sequoia-openpgp-ffi = { path = "openpgp-ffi" }
sequoia-autocrypt = { path = "autocrypt" }
sequoia-core = { path = "core" }
sequoia-ffi = { path = "ffi" }
sequoia-ffi-macros = { path = "ffi-macros" }
sequoia-ipc = { path = "ipc" }
sequoia-net = { path = "net" }
sequoia-store = { path = "store" }
sequoia-tool = { path = "tool" }
sequoia-sop = { path = "sop" }
sequoia-sqv = { path = "sqv" }
sequoia-guide = { path = "guide" }

[features]
default = ["crypto-nettle"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]

[lib]
name = "sequoia"
path = "src/lib.rs"

[profile.release]
debug = true
