[package]
name = "sequoia-secret"
version = "0.7.0"
build = "build.rs"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "secrets", "keystore", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[features]
default = ["background-services"]
background-services = []

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.7" }
sequoia-core = { path = "../core", version = "0.7" }
sequoia-ipc = { path = "../ipc", version = "0.7" }
sequoia-store-rusqlite = { path = "../store-rusqlite", version = "0.7" }

capnp = "0.9"
capnp-rpc = "0.9"
failure = "0.1.1"
futures = "0.1.17"
rusqlite = "0.14"
time = "0.1.38"
tokio-core = "0.1.10"
tokio-io = "0.1.4"

[build-dependencies]
capnpc = "0.9"

[lib]
name = "sequoia_secret"
path = "src/lib.rs"

[[bin]]
name = "sequoia-secret-key-store"
path = "src/server.rs"
doc = false
required-features = ["background-services"]
