[package]
name = "sq-manpage"
version = "0.1.0"
authors = ["Nora Widdecke <nora@sequoia-pgp.org>"]
edition = "2018"

[dependencies]
# man 0.3.0 with stuff we need (e.g. subcommands)
#man = { git = "https://github.com/puzzlewolf/man.git", branch = "for_sequoia" }
man = { path = "../../man" }
clap = { path = "../../clap" }
