[package]
name = "sequoia-store-rusqlite"
description = "Data types for working with rusqlite."
version = "0.7.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.7.0/sequoia_store_rusqlite"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-3.0"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[features]
default = ["background-services"]
background-services = []

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.7" }
rusqlite = "0.14"
time = "0.1.38"
